# kb-ingestion-backend

./: .env.example  .gitignore  BACKEND_GUIDE.md  Dockerfile  SSE_STREAMING_SPEC.md  alembic.ini  check_infra.py  compose.yml  docker-compose.yml  link_spider.py  postman_collection.json  pyproject.toml  requirements.txt  reset_all.py  run_migration.py
alembic/: env.py
alembic/versions/: 001_baseline.py  002_convert_json_columns_to_jsonb.py  003_fix_double_encoded_jsonb.py  004_unique_deep_links_per_source.py  005_add_file_type_to_kb_files.py  220b48740c44_add_crawl_columns_to_ingestion_jobs.py
deploy/: ecs_express_deploy.py  pull_and_restart.sh  setup_ec2.sh  update_and_restart.sh
doc/: README.md  agents.md  api-reference.md  architecture.md  configuration.md  data-models.md  database.md  ingestion-pipeline.md  operations.md  roadmap.md  sse-streaming.md
src/: config.py  main.py
src/agents/: context_agent.py  discovery.py  extractor.py  kb_agent.py  validator.py
src/api/: agent.py  context.py  files.py  ingest.py  nav.py  preview.py  query.py  queue.py  revalidate.py  router.py  sources.py  stats.py  stream.py
src/db/: connection.py  models.py  queries.py  session.py
src/models/: schemas.py
src/services/: context_cache.py  deep_link_extractor.py  haiku_prefilter.py  kb_query.py  nav_parser.py  pipeline.py  revalidation.py  s3_upload.py  stream_manager.py
src/tools/: aem_pruner.py  duplicate_checker.py  fetch_aem.py  file_context.py  filter_components.py  frontmatter_parser.py  html_converter.py  kb_agent_tools.py  (+1 more)
tests/: conftest.py  test_config.py
(+53 files in other folders)
